Update resources and spacing fixes.

--- a/src/resources/css/pngx-admin.css
+++ b/src/resources/css/pngx-admin.css
@@ -2510,6 +2510,15 @@ div.repeating-field .remove-repeater {
   visibility: visible;
 }
 
+/* Typography
+=============================================*/
+/* ## Hidden Class
+--------------------------------------------- */
+.pngx-a11y-hidden {
+  display: none !important;
+  visibility: hidden;
+}
+
 /* ==========================================================================
    Help CSS
    ========================================================================== */
@@ -2595,9 +2604,68 @@ div.repeating-field .remove-repeater {
 }
 
 .pngx-field-one-third {
-  width: 32.3333333333%;
+  width: -0.6666666667;
 }
 
 .pngx-field-two-thirds {
-  width: 65.6666666667%;
+  width: -0.3333333333;
+}
+
+/* ## PNGX Filters Loaders
+--------------------------------------------- */
+.pngx-filters-results__wrap {
+  position: relative;
+}
+
+.pngx-filters-c-loader {
+  align-items: center;
+  background: rgba(255, 255, 255, 0.8);
+  bottom: 0;
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  left: 0;
+  padding-top: 0;
+  position: fixed;
+  right: 0;
+  top: 0;
+  width: 100%;
+  z-index: 100;
+}
+
+.pngx-filters-c-loader__dot {
+  width: 15px;
+}
+.pngx-filters-c-loader__dot:not(:first-of-type) {
+  margin-left: 8px;
+}
+.pngx-filters-c-loader__dot circle {
+  fill: currentColor;
+}
+
+.pngx-filters-c-loader__dot circle {
+  animation-direction: normal;
+  animation-duration: 2.24s;
+  animation-iteration-count: infinite;
+  animation-name: pngx-filters-c-loader-bounce;
+  fill: #950402;
+  opacity: 0.07;
+}
+
+.pngx-filters-c-loader__dot--first circle {
+  animation-delay: 0.45s;
+}
+
+.pngx-filters-c-loader__dot--second circle {
+  animation-delay: 1.05s;
+}
+
+.pngx-filters-c-loader__dot--third circle {
+  animation-delay: 1.35s;
+}
+
+@keyframes pngx-filters-c-loader-bounce {
+  50% {
+    opacity: 1;
+  }
 }
